// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Circular Discriminator References > should not create circular references when child extends discriminator parent via allOf > ACHDetailsResponse-tree 1`] = `
[
  {
    "args": [
      {
        "args": {
          "$ref": "#/components/schemas/PaymentAccountDetailsResponse",
          "isImportable": true,
          "name": "paymentAccountDetailsResponse",
          "path": "paymentAccountDetailsResponse.ts",
        },
        "keyword": "ref",
      },
      {
        "args": {
          "additionalProperties": [],
          "properties": {
            "account_number": [
              {
                "keyword": "string",
              },
              {
                "args": {
                  "format": undefined,
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "account_number",
                "keyword": "name",
              },
            ],
            "type": [
              {
                "args": {
                  "asConst": false,
                  "items": [
                    {
                      "format": "string",
                      "name": ""ACH"",
                      "value": "ACH",
                    },
                  ],
                  "name": "ACHDetailsResponseType",
                  "typeName": "ACHDetailsResponseType",
                },
                "keyword": "enum",
              },
              {
                "args": {
                  "format": undefined,
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "type",
                "keyword": "name",
              },
            ],
          },
        },
        "keyword": "object",
      },
    ],
    "keyword": "and",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
]
`;

exports[`Circular Discriminator References > should not create circular references when child extends discriminator parent via allOf > DomesticWireDetailsResponse-tree 1`] = `
[
  {
    "args": [
      {
        "args": {
          "$ref": "#/components/schemas/PaymentAccountDetailsResponse",
          "isImportable": true,
          "name": "paymentAccountDetailsResponse",
          "path": "paymentAccountDetailsResponse.ts",
        },
        "keyword": "ref",
      },
      {
        "args": {
          "additionalProperties": [],
          "properties": {
            "routing_number": [
              {
                "keyword": "string",
              },
              {
                "args": {
                  "format": undefined,
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "routing_number",
                "keyword": "name",
              },
            ],
            "type": [
              {
                "args": {
                  "asConst": false,
                  "items": [
                    {
                      "format": "string",
                      "name": ""DOMESTIC_WIRE"",
                      "value": "DOMESTIC_WIRE",
                    },
                  ],
                  "name": "DomesticWireDetailsResponseType",
                  "typeName": "DomesticWireDetailsResponseType",
                },
                "keyword": "enum",
              },
              {
                "args": {
                  "format": undefined,
                  "type": "string",
                },
                "keyword": "schema",
              },
              {
                "args": "type",
                "keyword": "name",
              },
            ],
          },
        },
        "keyword": "object",
      },
    ],
    "keyword": "and",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
]
`;

exports[`Circular Discriminator References > should not create circular references when child extends discriminator parent via allOf > PaymentAccountDetailsResponse-tree 1`] = `
[
  {
    "args": [
      {
        "args": [
          {
            "args": {
              "$ref": "#/components/schemas/ACHDetailsResponse",
              "isImportable": true,
              "name": "ACHDetailsResponse",
              "path": "ACHDetailsResponse.ts",
            },
            "keyword": "ref",
          },
          {
            "args": {
              "properties": {
                "type": [
                  {
                    "args": {
                      "format": "string",
                      "name": "ACH",
                      "value": "ACH",
                    },
                    "keyword": "const",
                  },
                ],
              },
            },
            "keyword": "object",
          },
        ],
        "keyword": "and",
      },
      {
        "args": [
          {
            "args": {
              "$ref": "#/components/schemas/DomesticWireDetailsResponse",
              "isImportable": true,
              "name": "domesticWireDetailsResponse",
              "path": "domesticWireDetailsResponse.ts",
            },
            "keyword": "ref",
          },
          {
            "args": {
              "properties": {
                "type": [
                  {
                    "args": {
                      "format": "string",
                      "name": "DOMESTIC_WIRE",
                      "value": "DOMESTIC_WIRE",
                    },
                    "keyword": "const",
                  },
                ],
              },
            },
            "keyword": "object",
          },
        ],
        "keyword": "and",
      },
    ],
    "keyword": "union",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
]
`;

exports[`Circular Discriminator References > should still add discriminator constraint for non-allOf references > Payment-tree 1`] = `
[
  {
    "args": {
      "additionalProperties": [],
      "properties": {
        "account": [
          {
            "args": {
              "$ref": "#/components/schemas/PaymentAccountDetailsResponse",
              "isImportable": true,
              "name": "paymentAccountDetailsResponse",
              "path": "paymentAccountDetailsResponse.ts",
            },
            "keyword": "ref",
          },
          {
            "args": {
              "format": undefined,
              "type": "object",
            },
            "keyword": "schema",
          },
          {
            "args": "account",
            "keyword": "name",
          },
          {
            "keyword": "optional",
          },
        ],
      },
    },
    "keyword": "object",
  },
  {
    "args": {
      "format": undefined,
      "type": "object",
    },
    "keyword": "schema",
  },
]
`;
